[gd_scene load_steps=8 format=2]

[ext_resource path="res://AmmoPickup.gd" type="Script" id=1]
[ext_resource path="res://assets/Level_assets/Ammo_Box.scn" type="PackedScene" id=2]
[ext_resource path="res://assets/Level_assets/LevelAssets_SpatialMaterial.tres" type="Material" id=3]
[ext_resource path="res://assets/Level_assets/Ammo_Box_small.scn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 4, 3, 3.25 )

[sub_resource type="BoxShape" id=2]

extents = Vector3( 1.8, 2, 0.8 )

[sub_resource type="Animation" id=3]

resource_name = "AmmoAnim"
length = 4.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Holder:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 180, 0 ), Vector3( 0, 360, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Holder:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 0, 0 ), Vector3( 0, 1, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="AmmoPickup" type="Spatial"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
kit_size = 0

[node name="Holder" type="Spatial" parent="." index="0"]

editor/display_folded = true
_sections_unfolded = [ "Transform" ]

[node name="AmmoKit" type="Spatial" parent="Holder" index="0"]

[node name="Ammo_Box" parent="Holder/AmmoKit" index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
material/0 = ExtResource( 3 )
_sections_unfolded = [ "Transform", "material" ]

[node name="AmmoKitSmall" type="Spatial" parent="Holder" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.449994, 0 )

[node name="Ammo_Box_small" parent="Holder/AmmoKitSmall" index="0" instance=ExtResource( 4 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
material/0 = ExtResource( 3 )
_sections_unfolded = [ "Transform", "material" ]

[node name="AmmoPickupTrigger" type="Area" parent="Holder" index="2"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="ShapeKit" type="CollisionShape" parent="Holder/AmmoPickupTrigger" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 1 )
disabled = false

[node name="ShapeKitSmall" type="CollisionShape" parent="Holder/AmmoPickupTrigger" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.567669, 0 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = "AmmoAnim"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/AmmoAnim = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]


